# KernelForge

./: .gitignore  CMakeLists.txt  README.md  prompt.md
autoresearch/: README.md  __init__.py  program.md  requirements.txt  run_autoresearch.sh
autoresearch/adapters/: __init__.py
autoresearch/adapters/cpu_cpp/: __init__.py  adapter.py
autoresearch/adapters/gpu_torch/: __init__.py  adapter.py
autoresearch/configs/: global.yaml
autoresearch/configs/portfolios/: all_ops.yaml
autoresearch/core/: __init__.py  cli.py  dashboards.py  decision_policy.py  orchestrator.py  scheduler.py  state_store.py  utils.py
autoresearch/op_packs/: __init__.py
autoresearch/op_packs/cpu/: __init__.py
autoresearch/op_packs/gpu/: __init__.py
autoresearch/registry/: kernels_map.yaml  ops_index.yaml
code_base/: README.agent.md  readme.md
code_base/opencv-dnn/: README.agent.md
code_base_agent_gen/: run_summary_kernel_triage.json
kernel/: CMakeLists.txt
kernel/cpu_kernel/: CMakeLists.txt
kernel/cpu_kernel/conv_3x3/: CMakeLists.txt  readme.md
kernel/cpu_kernel/conv_3x3/example/: run_conv3x3.cc
kernel/cpu_kernel/conv_3x3/include/: kc_conv3x3.h
kernel/cpu_kernel/conv_3x3/perf/: bench_conv3x3.cc
kernel/cpu_kernel/conv_3x3/src/: kc_conv3x3.cc
kernel/cpu_kernel/conv_3x3/test/: gen_data.py  test_conv3x3_accuracy.cc
kernel/cpu_kernel/conv_3x3/test/data/: bias.npy  input.npy  output.npy  params.npy  weight.npy
kernel/cpu_kernel/elementwise/: CMakeLists.txt  readme.md
kernel/cpu_kernel/elementwise/example/: run_elementwise.cc
kernel/cpu_kernel/elementwise/include/: kc_elementwise.h
kernel/cpu_kernel/elementwise/perf/: bench_elementwise.cc
kernel/cpu_kernel/elementwise/src/: kc_elementwise.cc
kernel/cpu_kernel/elementwise/test/: gen_data.py  test_elementwise_accuracy.cc
kernel/cpu_kernel/elementwise/test/data/: a.npy  b.npy  out.npy  params.npy
kernel/cpu_kernel/reduce/: CMakeLists.txt  readme.md
kernel/cpu_kernel/reduce/example/: run_reduce.cc
kernel/cpu_kernel/reduce/include/: kc_reduce.h
kernel/cpu_kernel/reduce/perf/: bench_reduce.cc
kernel/cpu_kernel/reduce/src/: kc_reduce.cc
kernel/cpu_kernel/reduce/test/: gen_data.py  test_reduce_accuracy.cc
kernel/cpu_kernel/reduce/test/data/: input.npy  max.npy  params.npy  sum.npy
kernel/cpu_kernel/rmsnorm/: CMakeLists.txt  readme.md
kernel/cpu_kernel/rmsnorm/example/: run_rmsnorm.cc
kernel/cpu_kernel/rmsnorm/include/: kc_rmsnorm.h
kernel/cpu_kernel/rmsnorm/perf/: bench_rmsnorm.cc
kernel/cpu_kernel/rmsnorm/src/: kc_rmsnorm.cc
kernel/cpu_kernel/rmsnorm/test/: gen_data.py  test_rmsnorm_accuracy.cc
kernel/cpu_kernel/rmsnorm/test/data/: eps.npy  input.npy  output.npy  params.npy  weight.npy
kernel/cpu_kernel/softmax/: CMakeLists.txt  readme.md
kernel/cpu_kernel/softmax/example/: run_softmax.cc
kernel/cpu_kernel/softmax/include/: kc_softmax.h
kernel/cpu_kernel/softmax/perf/: bench_softmax.cc
kernel/cpu_kernel/softmax/src/: kc_softmax.cc
kernel/cpu_kernel/softmax/test/: gen_data.py  test_softmax_accuracy.cc
kernel/cpu_kernel/softmax/test/data/: input.npy  output.npy  params.npy
kernel/cpu_kernel/topk/: CMakeLists.txt  readme.md
kernel/cpu_kernel/topk/example/: run_topk.cc
kernel/cpu_kernel/topk/include/: kc_topk.h
kernel/cpu_kernel/topk/perf/: bench_topk.cc
kernel/cpu_kernel/topk/src/: kc_topk.cc
kernel/cpu_kernel/topk/test/: gen_data.py  test_topk_accuracy.cc
kernel/cpu_kernel/topk/test/data/: indices.npy  input.npy  params.npy  values.npy
kernel_autoresearch/: README.md  __init__.py  program.md  quick_start.sh  run_autoresearch.sh
kernel_autoresearch/configs/: agent_hybrid_quick.yaml  cloud_sources.yaml  default.yaml  fp16_hybrid_quick.yaml  int8_hybrid_quick.yaml  shapes.yaml
kernel_autoresearch/cpp_runner/: CMakeLists.txt
kernel_autoresearch/cpp_runner/include/: fp16_utils.h  gemm_kernels.h  json_print.h  timer.h
kernel_autoresearch/cpp_runner/src/: gemm_blocked.cc  gemm_blocked_pack.cc  gemm_naive.cc  gemm_reference.cc  main.cc
kernel_autoresearch/harness/: __init__.py  bench.py  manifest.json  reference.py
kernel_autoresearch/python/: __init__.py  agent_proposer.py  candidate_generator.py  cli.py  cloud_patterns.py  decision_policy.py  harness_guard.py  local_patterns.py  logbook.py  orchestration_loop.py  orchestrator.py  pattern_merge.py  patterns.py  progress_report.py  report.py  runner_client.py  scheduler.py  scorer.py  utils.py
kernel_autoresearch/speed_compare/: README.md  compare_gemm_vs_openblas.py  openblas_runner  openblas_runner.cc  run_compare.sh
kernel_autoresearch/tests/: test_agent_proposer.py  test_candidate_generator.py  test_decision_policy.py  test_harness_guard.py  test_local_patterns.py  test_progress_report.py  test_reference.py  test_scheduler.py
kernel_autoresearch/workspace/: best_config.json  kernel_candidate.json  orchestration_state.json
kernel_autoresearch/workspace_agent_quick/: best_config.json  kernel_candidate.json  orchestration_state.json
kernel_autoresearch/workspace_fp16_quick/: best_config.json  kernel_candidate.json  orchestration_state.json
kernel_autoresearch/workspace_int8_quick/: best_config.json  kernel_candidate.json  orchestration_state.json
kernel_autoresearch_v2/: __init__.py  program.md  run_autoresearch.sh
kernel_autoresearch_v2/configs/: default.yaml  shapes.yaml
kernel_autoresearch_v2/cpp_runner/: CMakeLists.txt
kernel_autoresearch_v2/cpp_runner/include/: gemm_kernels.h  json_print.h  timer.h
kernel_autoresearch_v2/cpp_runner/src/: gemm_blocked.cc  gemm_blocked_pack.cc  gemm_naive.cc  gemm_reference.cc  main.cc
kernel_autoresearch_v2/harness/: __init__.py  bench.py  manifest.json  reference.py
kernel_autoresearch_v2/python/: __init__.py  candidate_generator.py  cli.py  decision_policy.py  harness_guard.py  logbook.py  orchestration_loop.py  progress_report.py  report.py  runner_client.py  scheduler.py  utils.py
kernel_autoresearch_v2/workspace/: best_config.json  final_report.md  gemm_candidate.json  orchestration_state.json
tools/: agent_docgen.py
(+246 files in other folders)
